--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -241,7 +241,7 @@ a:hover {
     max-width: 100%;
     display: block;
     height: auto;
-    opacity: 30%;
+    opacity: 0.3;
     margin-bottom: 20px;
 }
 .profile-menu a {
